--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
 [build]
   [context.deploy-preview]
     ignore = "if [[ $HEAD == *feature/* ]]; then exit 1; else exit 0; fi"
+
+
+
+
+
+
+
+
+
+diocane
